plugins {
    id 'fabric-loom' version '1.5.8'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

// CI（GitHub Actions）环境可直连 Mojang，自动跳过 BMCLAPI 镜像，
// 避免镜像 SHA1 漂移导致 CI 构建失败；仅本地无法直连时使用镜像。
def useBmclapi = System.getenv("CI") == null

// Fabric Loom 镜像配置（为无法直连 Mojang 服务器的环境使用 BMCLAPI 镜像）
ext {
    loom_version_manifests = 'https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json'
    loom_libraries_base = 'https://bmclapi2.bangbang93.com/libraries/'
    loom_resources_base = 'https://bmclapi2.bangbang93.com/assets/'
}

loom {
    // 使用 BMCLAPI 直接下载版本 JSON，绕过 version manifest
    // 注意：SHA1 前缀可能随 BMCLAPI 更新而变化，若构建失败请检查此 URL
    if (useBmclapi) {
        customMinecraftManifest = 'https://bmclapi2.bangbang93.com/v1/packages/a540b5c5ded34de717f3acc10c9d3704b66670d8/1.20.1.json'
    }
}

repositories {
    mavenLocal()
    if (useBmclapi) {
        maven {
            name = 'BMCLAPI Minecraft Libraries'
            url = 'https://bmclapi2.bangbang93.com/libraries/'
        }
    }
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
    maven {
        name = 'TerraformersMC'
        url = 'https://maven.terraformersmc.com/'
    }
    maven {
        name = 'Shedaniel'
        url = 'https://maven.shedaniel.me/'
    }
    mavenCentral()
	// infrastructure SNAPSHOT 制品发布到中央快照仓库（需此仓库才能解析 -SNAPSHOT 版本）
	maven {
		name = 'Maven Central Snapshots'
		url = 'https://central.sonatype.com/repository/maven-snapshots/'
	}
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Cloth Config / AutoConfig 是必需依赖：配置模型由 AutoConfig 驱动持久化与 GUI
    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"

    // infrastructure：强依赖（单向），提供模块框架、ConfigLocker 配置锁定与 core.config 统一管理。
    // 依赖从 Maven Central SNAPSHOT 拉取（io.github.dx122dx.mc:infrastructure），不再经 flatDir。
    modImplementation("io.github.dx122dx.mc:infrastructure:${project.infrastructure_version}") {
        changing = true
    }

    // Test dependencies — fabric-loader-junit 提供 Minecraft 环境引导，支持在单元测试中使用 Minecraft 类
    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mockito 用于更灵活的 stub/mock 对象创建
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version,
                "infrastructure_version": infrastructure_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
    withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Maven Central 快照发布要求禁用 Gradle Module Metadata，
// 避免 .module 文件泄漏对 SNAPSHOT 依赖（infrastructure）的坐标。
tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}

// javadoc 在 Loom 1.5.x + JDK21 下对源码注释较严格（已有注释存在格式/链接问题），
// 关闭 doclint 仅生成告警，避免阻塞 build / 发布（源码注释质量另列计划清理）。
tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    (options as StandardJavadocDocletOptions).addBooleanOption('Xdoclint:none', true)
}

// maven-publish 配置：坐标与快照仓库全部由外部属性/环境变量驱动，
// 属性缺省时回落到现有 group/version，本地 ./gradlew build 行为完全不变。
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            // 发布坐标覆盖契约：CI 传 -PpublishGroup / -PpublishVersion，缺省回落到现有值
            groupId    = findProperty('publishGroup')   ?: project.group
            artifactId = project.archives_base_name
            version    = findProperty('publishVersion') ?: project.version

            pom {
                name        = 'Chunk Scanner'
                description = 'Client-side progressive chunk scanner for Fabric. Asynchronously scans loaded chunks with extensible analyzers (Sign, QShop). NOTE: this mod requires the "infrastructure" mod (io.github.dx122dx.mc:infrastructure) at runtime, published to Maven Central.'
                url         = 'https://github.com/dx122dx/chunkscanner'
                licenses {
                    license {
                        name = 'GNU Affero General Public License v3.0 only'
                        url  = 'https://www.gnu.org/licenses/agpl-3.0.txt'
                    }
                }
                developers {
                    developer {
                        id   = 'billy65536'
                        name = 'billy65536'
                    }
                }
                scm {
                    connection          = 'scm:git:git://github.com/dx122dx/chunkscanner.git'
                    developerConnection = 'scm:git:ssh://github.com/dx122dx/chunkscanner.git'
                    url                 = 'https://github.com/dx122dx/chunkscanner'
                }

                // 依赖均可从公共 Maven 解析（infrastructure 已发布到中央 SNAPSHOT），无需剔除本地坐标。
            }
        }
    }

    repositories {
        maven {
            name = 'centralSnapshots'
            url  = 'https://central.sonatype.com/repository/maven-snapshots/'
            credentials {
                username = System.getenv('CENTRAL_TOKEN_USERNAME')
                password = System.getenv('CENTRAL_TOKEN_PASSWORD')
            }
        }
    }
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}
